--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "denky-db": "^1.0.6",
-    "ws": "^7.4.5"
+    "enmap": "^5.8.7",
+    "ws": "^8.2.3"
   }
 }
